--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node bin/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-jest"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,11 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.1",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
   }
 }
