--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "path-to-regexp": "^6.2.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.1",
