--- a/package.json
+++ b/package.json
@@ -1,25 +1,52 @@
 {
-  "name": "azmock",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "ts-node bin/server.ts",
-    "test": "ts-jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2",
-    "path-to-regexp": "^6.2.2"
-  },
-  "devDependencies": {
-    "@babel/preset-typescript": "^7.24.1",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2"
-  }
+   "name": "pms",
+   "version": "0.0.1",
+   "private": true,
+   "scripts": {
+      "dev:server": "ts-node bin/server.ts",
+      "dev:ui": "vite dev",
+      "build": "vite build",
+      "preview": "vite preview",
+      "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+      "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+      "test": "vitest",
+      "lint": "prettier --check . && eslint .",
+      "format": "prettier --write .",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "@types/node": "^20.12.7",
+      "express": "^4.19.2",
+      "path-to-regexp": "^6.2.2",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.14",
+      "sqlite3": "^5.1.7",
+      "typeorm": "0.3.20"
+   },
+   "devDependencies": {
+      "@sveltejs/adapter-auto": "^3.0.0",
+      "@sveltejs/kit": "^2.0.0",
+      "@sveltejs/vite-plugin-svelte": "^3.0.0",
+      "@types/eslint": "^8.56.0",
+      "@typescript-eslint/eslint-plugin": "^7.0.0",
+      "@typescript-eslint/parser": "^7.0.0",
+      "autoprefixer": "^10.4.19",
+      "eslint": "^8.56.0",
+      "eslint-config-prettier": "^9.1.0",
+      "eslint-plugin-svelte": "^2.35.1",
+      "postcss": "^8.4.38",
+      "prettier": "^3.1.1",
+      "prettier-plugin-svelte": "^3.1.2",
+      "svelte": "^4.2.7",
+      "svelte-check": "^3.6.0",
+      "tailwindcss": "^3.4.3",
+      "ts-node": "10.9.1",
+      "tslib": "^2.4.1",
+      "typescript": "4.5.2",
+      "vite": "^5.0.3",
+      "vitest": "^1.2.0"
+   },
+   "type": "module",
+   "packageManager": "pnpm@8.12.0+sha256.553e4eb0e2a2c9abcb419b3262bdc7aee8ae3c42e2301a1807d44575786160c9"
 }
