--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "azmock",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "ts-node bin/server.ts",
-    "test": "ts-jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2",
-    "path-to-regexp": "^6.2.2"
-  },
-  "devDependencies": {
-    "@babel/preset-typescript": "^7.24.1",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2"
-  }
+   "name": "azmock",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "dev": "ts-node bin/server.ts",
+      "test": "ts-jest",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "better-sqlite3": "^9.6.0",
+      "express": "^4.19.2",
+      "path-to-regexp": "^6.2.2",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.20"
+   },
+   "devDependencies": {
+      "@babel/preset-typescript": "^7.24.1",
+      "@types/express": "^4.17.21",
+      "@types/jest": "^29.5.12",
+      "@types/node": "^16.11.10",
+      "jest": "^29.7.0",
+      "ts-jest": "^29.1.2",
+      "ts-node": "10.9.1",
+      "typescript": "^5.4.5"
+   }
 }
