--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-.idea/
-.vscode/
-node_modules/
-build/
-tmp/
-temp/
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
