--- a/package.json
+++ b/package.json
@@ -1,32 +1,48 @@
 {
-   "name": "azmock",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "dev": "ts-node bin/server.ts",
-      "test": "ts-jest",
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "dependencies": {
-      "better-sqlite3": "^9.6.0",
-      "express": "^4.19.2",
-      "path-to-regexp": "^6.2.2",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.20"
-   },
-   "devDependencies": {
-      "@babel/preset-typescript": "^7.24.1",
-      "@types/express": "^4.17.21",
-      "@types/jest": "^29.5.12",
-      "@types/node": "^16.11.10",
-      "jest": "^29.7.0",
-      "ts-jest": "^29.1.2",
-      "ts-node": "10.9.1",
-      "typescript": "^5.4.5"
-   }
+	"name": "azmock",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "vitest",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"better-sqlite3": "^9.6.0",
+		"express": "^4.19.2",
+		"path-to-regexp": "^6.2.2",
+		"reflect-metadata": "^0.1.13",
+		"typeorm": "0.3.20"
+	},
+	"devDependencies": {
+		"@babel/preset-typescript": "^7.24.1",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@swc/core": "^1.4.17",
+		"@types/eslint": "^8.56.0",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.0.0",
+		"@typescript-eslint/eslint-plugin": "^7.0.0",
+		"@typescript-eslint/parser": "^7.0.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"ts-node": "10.9.1",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"unplugin-swc": "^1.4.5",
+		"vite": "^5.0.3",
+		"vitest": "^1.2.0"
+	},
+	"type": "module"
 }
