--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
    "description": "",
    "main": "index.js",
    "scripts": {
+      "key:generate": "ts-node bin/generate-key.ts",
+      "key:update": "echo \"JWT_SECRET=$(ts-node bin/generate-key.ts --plain)\" > .env",
       "dev": "ts-node bin/server.ts",
       "test": "ts-jest",
       "start": "ts-node src/index.ts",
@@ -15,15 +17,17 @@
    "dependencies": {
       "better-sqlite3": "^9.6.0",
       "express": "^4.19.2",
+      "jose": "^5.2.4",
       "path-to-regexp": "^6.2.2",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.20"
+      "typeorm": "0.3.20",
+      "zod": "^3.23.4"
    },
    "devDependencies": {
       "@babel/preset-typescript": "^7.24.1",
       "@types/express": "^4.17.21",
       "@types/jest": "^29.5.12",
-      "@types/node": "^16.11.10",
+      "@types/node": "^20.12.0",
       "jest": "^29.7.0",
       "ts-jest": "^29.1.2",
       "ts-node": "10.9.1",
