--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
    "license": "ISC",
    "dependencies": {
       "better-sqlite3": "^9.6.0",
+      "cookie-parser": "^1.4.6",
+      "cors": "^2.8.5",
       "express": "^4.19.2",
       "jose": "^5.2.4",
+      "morgan": "^1.10.0",
       "path-to-regexp": "^6.2.2",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.20",
@@ -25,8 +28,11 @@
    },
    "devDependencies": {
       "@babel/preset-typescript": "^7.24.1",
+      "@types/cookie-parser": "^1.4.7",
+      "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
       "@types/jest": "^29.5.12",
+      "@types/morgan": "^1.9.9",
       "@types/node": "^20.12.0",
       "jest": "^29.7.0",
       "ts-jest": "^29.1.2",
