--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,7 +26,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.38",
-		"prettier": "^3.1.1",
+		"prettier": "3.2.5",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -38,7 +38,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@codemirror/lang-html": "^6.4.9",
+		"@codemirror/lang-json": "^6.0.1",
+		"@codemirror/lang-xml": "^6.1.0",
+		"@prettier/plugin-xml": "^3.4.1",
 		"clipboard": "^2.0.11",
+		"codemirror": "^6.0.1",
 		"theme-change": "^2.5.0"
 	}
 }
