--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "axios": "^1.7.2",
       "better-sqlite3": "^9.6.0",
       "cookie-parser": "^1.4.6",
       "cors": "^2.8.5",
